# taskbane

./: .gitignore  .nvim.lua  .prettierrc  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  justfile  package.json  pnpm-lock.yaml
.sqlx/: query-05b31b740533443d81f54a5f5d75314dae5fb2ddee65b58d613f7e5b5b698b85.json  query-095fc2a0285cf874ddfb626468822772ecf65d8d78c47f90369c7908993eb2e2.json  query-18369f3e7b6bf43757074223e21f5badf01c6c3db2492472a9cec7511f448fb5.json  query-21ea5df4d426e464650bdbefd01ad0aa26d7232919ed8ac0208b52c025784c75.json  query-22d3e42ce9e3126cefc5a653fea0e3f392491d4cdee276b57069159d250931c1.json  query-24edb45a62d58ccb3e41bee206d5f895c85ac516ad2e7afad02aeb0732a87a3c.json  query-2adc5617fd119b46b4e26ce6eddd3eacfdba2b13900de69f417514cd06d42c5d.json  query-325379efe507d0cab48167571b78e3a9fd62aa5fa147959379809062fef7f3c3.json  query-333630131b3e556ed6fda67bb3ab78346bdb2a21ba1e91a7d0921e885d4ea4b5.json  query-34a4118aba1e3ddcfbcf7916c7ecbcd119b2752a78a1c2d4941e36627aefcec1.json  query-34c2514c8d59673b25cf249600c7aedbc34cd9114d8abe304fcf1320286a5e1c.json  query-385f83c45087350ecbf59aad8680575b86168c5bfc4ea80e6d94dfb280078688.json  query-3ae7bb38b776d7de846b8b37d55cda2fb51c192e7f2e05f87a9c0b5c5a0fbd2a.json  query-3e19a402db2cc4939d1470393f6e2bd0b7f41e9000485a819545a7b23428b1e8.json  query-40c4e737ed6139b93989d2a0709a927b80c1546eed34a99c7996b31918b33582.json  query-41685584a22fa85bc32ef576b730818ea7da69328bda5c340580870669ed2805.json  query-48b85ab562a2f3bffcaa361f55887d40369ea387e3eddfb3f86f99c7b569d1c3.json  query-508d6def6dd3b849af79d354ba5411276ae04f09839d82b856c73e6c35bd6a41.json  query-671a65ec2a65d72afcf5b0e178189b3c2476151c0431133ff5769e0f76e64e7e.json  query-86931d6ad90638d797ad1fa78a3bbcab705e8dc665afce477700185b5644eca3.json  query-90baf9587005486e0940b514184d1beaf33d23cfb73d288e1f1c376df22cd561.json  query-918c667a95a5fcd06b89ca1badf3d77ba559fdd7f180a923db281a2d8a505f57.json  query-96fa2ba2bb20204cbe1405d4c4e7ae2a3006ab2280672fcecc0cc352e1975141.json  query-a17ccd4b8fe1fd12562d2447e83181b8350433c52bd090431d28e045c4fb5473.json  query-a6277840d70615ff4b7f228ab855bc621a0cacc6b8d0c266f75044e890a37c8a.json  query-a8d68b674560500bbe13e95155f4a7b7bb4e2a11554201641f06d7d28c07cb2c.json  query-ac49683ba925891c03738915fb9def7c03068354ad382c0d9629ef8484529d1d.json  query-c41df06b8606d02069e8ece8d36a6118b3686144ce4b848585a534229f9efdb3.json  query-c58ad25c813df0004d89cd1852d9ab1a3fc0aae36dd201038d2067bdd752f5a2.json  (+11 more)
(+76 files in other folders)
