[package]
name = "taskbane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.14.0", features = ["full"] }
async-trait = "0.1.88"
axum = "0.8.4"
futures = "0.3.31"
rand = "0.9.2"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
uuid = {version = "1.17.0", features = ["v4", "serde"]}
