[package]
name = "taskbane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.14.0", features = ["full"] }
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenv = "0.15.0"
futures = "0.3.31"
headers-accept = "0.2.0"
mediatype = "0.20.0"
rand = "0.9.2"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono", "macros"]}
thiserror = "2.0.14"
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = {version = "0.15.0", features = ["sqlite"]}
tracing = "0.1.41"
tracing-subscriber = "0.3"
uuid = {version = "1.17.0", features = ["v4", "serde"]}
webauthn-rs = "0.5.2"
